[#176924349] Add get EYCA Activation API
