# utils/models.ts
@@ -10,6 +10,7 @@ import {
 import { FiscalCode, NonEmptyString } from "italia-ts-commons/lib/strings";
 import { ContinueEycaActivationInput } from "../ContinueEycaActivation";
 import { UserCgnModel } from "../models/user_cgn";
+import { UserEycaCardModel } from "../models/user_eyca_card";
 
 export const retrieveUserCgn = (
   userCgnModel: UserCgnModel,
@@ -25,6 +26,23 @@ export const retrieveUserCgn = (
         fromOption(
           ResponseErrorNotFound("Not Found", "User's CGN status not found")
         )(maybeUserCgn)
+      )
+    );
+
+export const retrieveUserEycaCard = (
+  userEycaCardModel: UserEycaCardModel,
+  fiscalCode: FiscalCode
+) =>
+  userEycaCardModel
+    .findLastVersionByModelId([fiscalCode])
+    .mapLeft<IResponseErrorInternal | IResponseErrorNotFound>(() =>
+      ResponseErrorInternal("Error trying to retrieve user's EYCA Card")
+    )
+    .chain(maybeUserEycaCard =>
+      fromEither(
+        fromOption(
+          ResponseErrorNotFound("Not Found", "User's EYCA Card not found")
+        )(maybeUserEycaCard)
       )
     );
 
